adicional de página Sobre Mim

--- a/index.html
+++ b/index.html
@@ -47,12 +47,23 @@
             <div class="sombra"></div>
     </main>
     <section id="sobremim">
-        <div class="sobremim">
-            <h3>Sobre mim</h3>
-            <p>Me formei em técnico de petróleo e gás pelo IFF-Cabo Frio e Tecnólogo em Gastronomia pelo mesmo instituto. Comecei na gastronomia como ajudante de cozinha em uma franquia de restaurantes japonês, sendo promovido a Sushiman em menos de 6 meses. Chegando a Sushichef e chefiando a área fria da cozinha japonesa.
+        <div class="sombra-2"></div>
+        <div class="sobre-content">
+            <div class="sobremim">
+                <h3>Sobre mim</h3>
+                <p>Me formei em técnico de petróleo e gás pelo IFF-Cabo Frio e Tecnólogo em Gastronomia pelo mesmo instituto. Comecei na gastronomia como ajudante de cozinha em uma franquia de restaurantes japonês, sendo promovido a Sushiman em menos de 6 meses. Chegando a Sushichef e chefiando a área fria da cozinha japonesa.
                 Me aventurei com a Start Eat, padaria artesanal criada por mim, e conseguindo uma cadeia de mais de 100 clientes.
-                Apaixonado por todas áreas que envolvem cultura e história alimentares, e princípios da culinária. Panificação, fermentação, panc e raízes alimentar é o que mais gosto.
-                Me aventurando no mundo da programação, estudando e atualizando aprendizados. Vejo o mundo como uma grande programação, onde tudo envolve programar, nosso corpo é programado para funcionar de certa maneira, e mesmo assim podemos nos reprogramar todos os dias para atingir os objetivos. Vejo a programação como ferramenta para solucionar problemas enfrentados diariamente em todas as áreas da vida. E espero juntar o amor pela programação com o pela gastronomia para poder ajudar em vários problemas que se encontra no ramo.</p>
+                Apaixonado por todas áreas que envolvem cultura e história alimentares, e princípios da culinária. Panificação, fermentação, panc e raízes alimentares é o que mais gosto.
+                Me aventurando no mundo da programação, estudando e atualizando aprendizados. Vejo o mundo como uma grande programação, onde tudo envolve programar. Nosso corpo é programado para funcionar de certa maneira, e mesmo assim podemos nos reprogramar todos os dias para atingir os objetivos. Vejo a programação como ferramenta para solucionar problemas enfrentados diariamente em todas as áreas da vida. E espero juntar o amor pela programação com o pela gastronomia para poder ajudar em vários problemas que se encontra no ramo.</p>
+            </div>
+            <div class="sobremim-img">
+                <img class="img-2" src="assets/img/7.jpg" alt="foto pão taioba">
+                <img class="img-2" src="assets/img/2.jpg" alt="foto donuts">
+                <img class="img-2" src="assets/img/18.jpg" alt="foto sushi">
+                <img class="img-2" src="assets/img/8.jpg" alt="foto hamburguer">
+                <img class="img-2" src="assets/img/6.jpg" alt="foto pão coração">          
+              </div>
+
         </div>
     </section>
 </body>
