--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <div class="sombra-2"></div>
         <div class="grid-img-righ"><a class="botao2" href="#pizza">➠</a>
             <div class="text-sections">
-                <h2>Sobre mim</h2>
+                <h2 class="titulo">Sobre mim</h2>
                 <p>Me formei em técnico de petróleo e gás pelo IFF-Cabo Frio e Tecnólogo em Gastronomia pelo mesmo instituto. Comecei na gastronomia como ajudante de cozinha em uma franquia de restaurantes japonês, sendo promovido a Sushiman em menos de 6 meses. Chegando a Sushichef e chefiando a área fria da cozinha japonesa.
                 Me aventurei com a Start Eat, padaria artesanal criada por mim, e conseguindo uma cadeia de mais de 100 clientes.
                 Apaixonado por todas áreas que envolvem cultura e história alimentares, e princípios da culinária. Panificação, fermentação, panc e raízes alimentares é o que mais gosto.
@@ -75,7 +75,7 @@
                 <img class="img-grid" src="assets/img/21.jpg" alt="foto pizza">          
                 </div>
                 <div class="text-sections text-up">
-                <h2>Pizza</h2>
+                <h2 class="titulo">Pizza</h2>
                 <p>As pizzas pré-assadas surgiram como uma solução conveniente para atender à crescente demanda por alimentos rápidos e práticos. A história das pizzas pré-assadas remonta ao século XX, quando a popularidade das pizzas aumentou significativamente em todo o mundo.
                     Inicialmente, as pizzas eram preparadas apenas em pizzarias tradicionais, onde os chefs habilidosos faziam a massa fresca, adicionavam os ingredientes e a assavam em fornos a lenha. No entanto, à medida que as pizzarias se tornaram cada vez mais populares, os empreendedores começaram a buscar maneiras de tornar a pizza mais acessível e conveniente.
                     Assim, as pizzas pré-assadas desempenharam um papel importante na evolução da indústria da pizza, oferecendo uma alternativa conveniente e acessível que permite que as pessoas apreciem esse prato adorado em qualquer momento e lugar.<br>
@@ -93,7 +93,7 @@
         <div class="sombra-2"></div>
         <div class="grid-img-righ"><a class="botao2" href="#cinnamon">➠</a>
             <div class="text-sections">
-                <h2>Babka</h2>
+                <h2 class="titulo">Babka</h2>
                 <p>A babka é um delicioso pão doce trançado de origem europeia, que se tornou bastante popular em várias partes do mundo. Sua história remonta a séculos atrás, quando foi criada como uma sobremesa tradicional nas comunidades judaicas da Europa Oriental.
                     A palavra "babka" deriva do termo polonês "baba", que significa "velhinha" ou "avó". Acredita-se que a babka tenha recebido esse nome porque a sua forma trançada se assemelhava aos cachos de cabelo das avós. Ao longo do tempo, a babka se espalhou por diferentes culturas e ganhou variações regionais.
                     A receita tradicional da babka envolve a preparação de uma massa macia e levemente adocicada, que é deixada para fermentar e crescer. Em seguida, a massa é estendida em uma superfície plana e espalhada com uma generosa camada de recheio doce. Os recheios mais comuns são de chocolate ou de canela, mas também existem outras opções, como nozes, frutas secas e até mesmo queijos.</p>
@@ -120,7 +120,7 @@
                 <img class="img-grid" src="assets/img/27.jpg" alt="foto cinnamonroll">          
             </div>
             <div class="text-sections text-up">
-                <h2>Cinnamon Rolls</h2>
+                <h2 class="titulo">Cinnamon Rolls</h2>
                 <p>As pizzas pré-assadas surgiram como uma solução conveniente para atender à crescente demanda por alimentos rápidos e práticos. A história das pizzas pré-assadas remonta ao século XX, quando a popularidade das pizzas aumentou significativamente em todo o mundo.
                     Inicialmente, as pizzas eram preparadas apenas em pizzarias tradicionais, onde os chefs habilidosos faziam a massa fresca, adicionavam os ingredientes e a assavam em fornos a lenha. No entanto, à medida que as pizzarias se tornaram cada vez mais populares, os empreendedores começaram a buscar maneiras de tornar a pizza mais acessível e conveniente.
                     Assim, as pizzas pré-assadas desempenharam um papel importante na evolução da indústria da pizza, oferecendo uma alternativa conveniente e acessível que permite que as pessoas apreciem esse prato adorado em qualquer momento e lugar.<br>
@@ -137,7 +137,7 @@
         <div class="sombra-2"></div>
         <div class="grid-img-righ"><a class="botao2" href="#cinnamon">➠</a>
             <div class="text-sections">
-                <h2>Recheadão</h2>
+                <h2 class="titulo">Recheadão</h2>
                 <p>A babka é um delicioso pão doce trançado de origem europeia, que se tornou bastante popular em várias partes do mundo. Sua história remonta a séculos atrás, quando foi criada como uma sobremesa tradicional nas comunidades judaicas da Europa Oriental.
                     A palavra "babka" deriva do termo polonês "baba", que significa "velhinha" ou "avó". Acredita-se que a babka tenha recebido esse nome porque a sua forma trançada se assemelhava aos cachos de cabelo das avós. Ao longo do tempo, a babka se espalhou por diferentes culturas e ganhou variações regionais.
                     A receita tradicional da babka envolve a preparação de uma massa macia e levemente adocicada, que é deixada para fermentar e crescer. Em seguida, a massa é estendida em uma superfície plana e espalhada com uma generosa camada de recheio doce. Os recheios mais comuns são de chocolate ou de canela, mas também existem outras opções, como nozes, frutas secas e até mesmo queijos.</p>
